--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,6 +1,8 @@
-.main {
-    display: flex;
-    justify-content: center;
-    color: #fff;
-    padding-top: 20px;
+.h1 {
+    padding-top: 10px;
+    margin-bottom: 20px;
+    color: #facf5a;
+    text-align: center;
+    font-size: 45px;
+    font-weight: 800;
 }
