--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -45,3 +45,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.isNotClickable {
+    pointer-events: none;
+    cursor: default;
+}
